--- a/debug/Dockerfile.erb
+++ b/debug/Dockerfile.erb
@@ -1,1 +1,1 @@
-FROM local/php-fpm:<%= image.version %>-centos-<%= image.build_suffix %>
+FROM local/php-fpm-alma:<%= image.version %>-alma-<%= image.build_suffix %>
